# mac_cleaner

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEVELOPMENT_FRAMEWORK.md  PROGRESS.md  README.md  file_scanner.py  logger.py  main.py  pyproject.toml  requirements-dev.txt  setup_project.py  ui.py
.github/workflows/: main.yml
config/: locations_db.json  system_paths.json
docs/: README.md  architecture.md  development.md  project.md
docs/architecture/decisions/: ADR-001-clean-architecture.md
scripts/: check_docs_coherence.sh
src/: __init__.py
src/core/: cleaner.py  scanner.py  validator.py
src/database/: db_handler.py
src/domain/models/: disk_info.py  memory_info.py
src/domain/services/: __init__.py  disk_analyzer.py  memory_analyzer.py
src/infrastructure/error/: error_handling_system.py
src/infrastructure/logging/: audit_logging_system.py
src/infrastructure/security/: data_protection_mechanisms.py  input_validation_layer.py
src/infrastructure/testing/: unit_test_coverage.py
src/ui/: system_cleaner.py
src/utils/: file_utils.py
tests/: doc_alignment_test.py  requirements-test.txt  test_cleaner.py  test_db_handler.py  test_main.py  test_scanner.py
tests/documentation/: pytest.ini  test_core_docs_coherence.py  test_documentation_integrity.py
tests/unit/: test_data_protection_mechanisms.py  test_disk_analyzer.py  test_error_handling_system.py  test_memory_analyzer.py  test_unit_test_coverage.py  test_validator.py
