[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mac_cleaner"
version = "1.0.0"
description = "A Mac system cleaner with undo capability"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pathlib",
    "typing",
]

[project.optional-dependencies]
test = ["pytest"]
