[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mac_cleaner"
version = "1.0.0"
description = "A Mac system cleaner with undo capability"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pathlib",
    "typing",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0"
]

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
